--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ nav.navbar.bootsnav ul.nav > li.dropdown span {
     font-size: 8px;
     margin-left: 15px;
 }
-.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a {color:#6a708e;}
+.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a {color:#000000;}
 .sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a:hover,.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a:focus,.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li.active>a{color: #85ADA3;}
 /*.nav li*/
 
@@ -198,7 +198,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
     content: " ";
     top:0;
     left:0;
-    background:#85ada31c;
+    background:#85ada319;
     width:100%;
     height:100%;
 }
@@ -232,7 +232,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
     color: #fff;
     background: #8E3965;
     border:1px solid #8E3965;
-    box-shadow: 0 5px 20px #85ada3ab;
+    box-shadow: 0 5px 20px #046C65;
     -webkit-transition: 0.3s linear; 
     -moz-transition: 0.3s linear; 
     -ms-transition: 0.3s linear; 
