--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,7 +296,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
     left: 0;
     width: 109%;
     height: 90px;
-    background: #85ADA3;
+    background: #046C65;
 }
 /*.ab-list-icon */
 .about-list-icon ul {
