--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,12 +193,13 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
     background-position: center;
     height:890px;
 }
+
 .welcome-hero:before{
     position:absolute;
     content: " ";
     top:0;
     left:0;
-    background:#85ada319;
+    background:#25423c6c;
     width:100%;
     height:100%;
 }
@@ -207,11 +208,11 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
 /*.header-text-area*/
 .header-text h2 {
     color: #fff;
-    font-size: 54px;
+    font-size: 42px;
     font-weight: 700;
     text-transform: uppercase;
     line-height: 1.5;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 4px rgb(0, 0, 0);
 }
 .header-text h2 span {color: #8E3965;}
 .header-text p {
@@ -221,7 +222,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
     text-transform: uppercase;
     margin: 30px 0 60px;
     letter-spacing: 1px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 4px rgb(0, 0, 0);
 }
 .header-text a {
     width: 200px;
@@ -232,7 +233,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
     color: #fff;
     background: #8E3965;
     border:1px solid #8E3965;
-    box-shadow: 0 5px 20px #046C65;
+    box-shadow: 0 5px 20px #000000b3;
     -webkit-transition: 0.3s linear; 
     -moz-transition: 0.3s linear; 
     -ms-transition: 0.3s linear; 
