--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,7 +409,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     margin-bottom: 37px;
 }
 .progress-bar {
-   background: #85ADA3;
+   background: hsl(165, 20%, 60%);
     border-radius: 3px;
    -webkit-transition: width 1.5s ease-in-out;
    -ms-transition: width 1.5s ease-in-out;
@@ -698,7 +698,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
         11. Contact
 --------------------------------------*/
 .contact {
-    background: #f9fbfd;
+    background: #85ada339;
     padding: 50px 0 100px;
 }
 .single-contact-box {padding-top: 100px;}
