--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,16 +209,21 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
     align-items: center;
     justify-content: center;
     position:relative;
-    background: #8E3965;
+    background:url(../images/about/Display.png)no-repeat;
     background-size:cover;
     background-position: center;
     height:890px;
 }
 
-
-
-
-
+.casestudy1-hero:before{
+    position:absolute;
+    content: " ";
+    top:0;
+    left:0;
+    background:#000000a1;
+    width:100%;
+    height:100%;
+}
 
 
 
