--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
     align-items: center;
     justify-content: center;
     position:relative;
-    background:url(../images/about/Display.png)no-repeat;
+    background:url(../images/about/Lenovobackdrop.png)no-repeat;
     background-size:cover;
     background-position: center;
     height:890px;
@@ -220,10 +220,32 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
     content: " ";
     top:0;
     left:0;
-    background:#000000a1;
+    background:#000000a4;
     width:100%;
     height:100%;
 }
+
+.casestudy2-hero{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position:relative;
+    background:url(../images/about/Lenovobackdrop.png)no-repeat;
+    background-size:cover;
+    background-position: center;
+    height:890px;
+}
+
+.casestudy2-hero:before{
+    position:absolute;
+    content: " ";
+    top:0;
+    left:0;
+    background:#000000a4;
+    width:100%;
+    height:100%;
+}
+
 
 
 
