--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,26 @@ nav.navbar.bootsnav .navbar-toggle i{color: #046C65;}
     height:100%;
 }
 
+.casestudy3-hero{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position:relative;
+    background:url(../images/about/CCbackdrop.png)no-repeat;
+    background-size:cover;
+    background-position: center;
+    height:890px;
+}
 
+.casestudy3-hero:before{
+    position:absolute;
+    content: " ";
+    top:0;
+    left:0;
+    background:#000000a4;
+    width:100%;
+    height:100%;
+}
 
 
 
@@ -690,7 +709,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     position:absolute;
     height:100%;
     width:100%;
-    background:#85ada3ad;
+    background:#000000ce;
     display:flex;
     align-items:center;
     text-transform: uppercase;
@@ -710,8 +729,10 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 .isotope-overlay a {
     display: inline-block;
     color: #fff;
-    font-size: 14px;
+    font-size: 32px;
+    font-weight: bold;
     text-align: center;
+
 }
 .isotope .item:hover .isotope-overlay{
     -webkit-transform:scale(1);
