--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -936,7 +936,50 @@ a#download-button {
 }
 
 
+a#casestudy1-button {
+    color: #ffffff;
+    font-weight: 650;
+}
 
+/*LANDING PAGE HEADER
+/*.header-text-area*/
+.header-text1 h2 {
+    color: #fff;
+    font-size: 38px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1.5;
+    text-shadow: 2px 2px 4px rgb(0, 0, 0);
+}
+.header-text1 h2 span {color: #8E3965;}
+.header-text1 p {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin: 30px 0 60px;
+    letter-spacing: 1px;
+    text-shadow: 2px 2px 4px rgb(0, 0, 0);
+}
+.header-text1 a {
+    width: 220px;
+    height: 60px;
+    line-height: 60px;
+    border-radius: 3px;
+    text-transform: capitalize;
+    color: #fff;
+    background: #7F1A22;
+    border:1px solid #7F1A22;
+    box-shadow: 0 5px 20px #000000b3;
+    -webkit-transition: 0.3s linear; 
+    -moz-transition: 0.3s linear; 
+    -ms-transition: 0.3s linear; 
+    -o-transition: 0.3s linear; 
+    transition: 0.3s linear;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.header-text1 a:hover{ box-shadow: 0 5px 20px rgba(0,0,0,.4);background:#85ADA3;border: 1px solid #85ADA3;}
+/*.header-text-area*/
 
 
 /*========================Thank you=================
